# podaj-lapke-api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
core/: admin.py  models.py
core/api/: serializers.py  urls.py  views.py
core/fixtures/: user.json
core/migrations/: 0001_initial.py  0002_user_avatar.py
core/tests/: conftest.py  test_api.py  test_models.py
podaj_lapke/: asgi.py  settings.py  urls.py  wsgi.py
shelters/: models.py
shelters/migrations/: 0001_initial.py
shelters/tests/: conftest.py  test_models.py
